started timezone select, limited time to UTC for now

--- a/css/time.css
+++ b/css/time.css
@@ -12,7 +12,8 @@ input{
     color: #aaa;
     text-align: center;
 }
-input[type=button]{
+input[type=button],
+select{
     cursor: pointer;
 }
 #day,
